Dolly backend: hindre dobbeltinnsending for eksterne personer på gjenopprett